salesforce-deployment/force-app/main/default/objects/Contact_Email__c/Contact_Email__c.object-meta.xml
<CustomObject>
    <label>Contact_Email</label>
    <nameField>
        <label>Contact Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>contact_Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>