salesforce-deployment/force-app/main/default/objects/Contact_Email__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>text field</description>
    <label>Data</label>
    <length>25</length>
    <type>Text</type>
</CustomField>