salesforce-deployment/force-app/main/default/objects/Contact_Email__c/fields/Ispreferred__c.field-meta.xml
<CustomField>
    <fullName>Ispreferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ispreferred</label>
    <type>Checkbox</type>
</CustomField>