salesforce-deployment/force-app/main/default/objects/Contact_Email__c/listViews/MyEmailView.listView-meta.xml
<ListView>
    <fullName>MyEmailView</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Ispreferred__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>MyEmailView</label>
</ListView>